# kafkars

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  test.yaml
bench/: README.md  poll_messages.py
docs/: api.md  architecture.md  index.md
docs/getting-started/: quickstart.md
docs/guide/: batch-processing.md  offset-policies.md
python/kafkars/: __init__.py  schema.py  source_topic.py  testing.py
src/: consumer.rs  consumer_manager.rs  consumer_trait.rs  lib.rs  mock_consumer.rs  source_topic.rs  test_runner.rs  test_scenario.rs
tests/: test_scenarios.py  test_schema.py
tests/data/: live_detection_events.json  single_partition.json  two_partition_ordering.json
tests/scenarios/: basic_ordering.json  live_detection.json  single_partition_delayed_live.json  single_partition_live.json
