[dependencies]
arrow = {version = "57.3.1", features = ["pyarrow"]}
pyo3 = {version = "0.26.0", features = ["abi3-py310"]}
rdkafka = "0.38.0"
uuid = {version = "1", features = ["v4"]}

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
name = "kafkars"

[package]
edition = "2021"
license = "Apache-2.0"
name = "kafkars"
version = "0.0.1"
